force-app/main/default/objects/util_closer_Case_Log__c/fields/Batch_Log__c.field-meta.xml
<CustomField>
    <fullName>Batch_Log__c</fullName>
    <description>Parent Batch Log record</description>
    <label>Batch Log</label>
    <referenceTo>util_closer_Batch_Log__c</referenceTo>
    <relationshipLabel>Case Logs</relationshipLabel>
    <relationshipName>Case_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>