force-app/main/default/objects/util_closer_Case_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if processing failed</description>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>