force-app/main/default/objects/util_closer_Case_Log__c/fields/Processing_Result__c.field-meta.xml
<CustomField>
    <fullName>Processing_Result__c</fullName>
    <description>Result of processing this Case</description>
    <label>Processing Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Not Matched</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Simulated</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>