force-app/main/default/objects/util_closer_Case_Log__c/fields/Rule_Evaluation_Details__c.field-meta.xml
<CustomField>
    <fullName>Rule_Evaluation_Details__c</fullName>
    <description>JSON details of each rule evaluation</description>
    <label>Rule Evaluation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>